micro_ecomm/infra/k8s/microservices/payment-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: ClusterIP
  ports:
    - port: 5004
      targetPort: 5004
  selector:
    app: payment-service
